syntax = "proto3";

package com.island.code.srv.auth;

service Auth {
	rpc MakeAccessToken (MakeTokenRequest) returns (MakeTokenResponse) {}
	rpc DelUserAccessToken (DelTokenRequest) returns (DelTokenResponse) {}
	rpc GetCachedAccessToken (GetCachedTokenRequest) returns (GetCachedTokenResponse) {}
	// 使用用户名密码登录
	rpc LoginByName(LoginByNameRequest) returns (LoginByNameResponse) {}
	// 更新密码
	rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse) {}
}

message MakeTokenRequest {
	string userID = 1;
	string deviceID = 2;
}
message MakeTokenResponse {
	Error error = 1;
	MakeTokenData data = 2;
}


message MakeTokenData {
	string token = 1;
}
message DelTokenRequest {
	string token = 1;
}
message DelTokenResponse {
	Error error = 1;
}



message GetCachedTokenRequest {
	string userID = 1;
	string deviceID = 2;
}
message GetCachedTokenResponse {
	Error error = 1;
	GetCachedTokenData data = 2;
}
message GetCachedTokenData {
	string token = 1;
}


message LoginByNameData {
	string userID = 1;
	string loginName = 2;
	string loginPwd = 3;
	string token = 4;
	string deviceID = 5; //登录设备id
}
message LoginByNameRequest {
	string loginName = 1;
	string loginPwd = 2;
	string deviceID = 3; //登录设备id
}
message LoginByNameResponse {
	Error error = 1;
	LoginByNameData data = 2;
}



message UpdatePasswordRequest {
	string userID = 1;
	string password = 2;

}
message UpdatePasswordResponse {
	Error error = 1;
}


message LogoutEvent {
	string id = 1;
	int64 sentTime = 2;
	string userID = 3;
}


message Error{
	int32 code = 1;
	string msg = 2;
}